added leaderboard and message routes
